--- a/views/mit.ejs
+++ b/views/mit.ejs
@@ -1,1 +1,187 @@
-<div>Hello World you are at MIT!</div>
+<!-- <div>Hello World you are at MIT!</div> -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/> 
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <title>Portfolio</title>
+</head>
+
+
+
+<body>
+
+    <!-- LEFT 1 -->
+    <div class="frame">
+        <div class="main_frame">
+            <div class="left_frame">
+                <div class="left_1">
+                    <div class="left_1-image">
+                        <img src="images/profile.png" 
+                        width="156px" 
+                        height="142px" 
+                        alt=""
+                        />
+                    </div>
+                    <div class="left_1-2"><%=user.name%></div>
+                    <div class="left_1-3"><%=user.profession%></div>
+                    <div class="left_1-icons">
+    <a class="link href" href="">
+        <div class="icons">
+            <img src="icons/Dribbble.svg" class="icons-1">
+        </div>
+    </a>
+    <a class="link href" href="">
+        <div class="icons">
+            <img src="icons/Facebook.svg" class="icons-1">
+        </div>
+    </a>
+    <a class="link href" href="">
+        <div class="icons">
+            <img src="icons/Instagram.svg" class="icons-1">
+        </div>
+    </a>
+    <a class="link href" href="">
+        <div class="icons">
+            <img src="icons/Linkeding.svg" class="icons-1">
+        </div>
+    </a>
+    <a class="link href" href="">
+        <div class="icons">
+            <img src="icons/Twitter.svg" class="icons-1">
+        </div>
+    </a>
+    <a class="link href" href="">
+        <div class="icons">
+            <img src="icons/Youtube.svg" class="icons-1">
+        </div>
+    </a>
+</div>
+   
+                </div>
+
+                <div class="marginer"></div>
+<!-- LEFT 2 -->
+          <div class="user-info">
+  <div class="info-box">
+    <span class="info-label">Age:</span>
+    <span class="info-value"><%= user.age %></span>
+  </div>
+  <div class="info-box">
+    <span class="info-label">Residence:</span>
+    <span class="info-value"><%= user.residence %></span>
+  </div>
+  <div class="info-box">
+    <span class="info-label">Address:</span>
+    <span class="info-value"><%= user.address %></span>
+  </div>
+  <div class="info-box">
+    <span class="info-label">Profession:</span>
+    <span class="info-value"><%= user.profession %></span>
+  </div>
+</div>
+
+
+<!-- LEFT 3 -->
+
+<div class="left_3">
+    <h3 class="section-title">Languages</h3>
+
+    <div class="language-box">
+        <p>
+            <%= user.languages[0] %>
+        </p>
+        <span class="percent">100%</span>
+    </div>
+    <div class="bar">
+        <div class="bar-fill" style="width: 100%;"></div>
+    </div>
+
+    <div class="language-box">
+        <p>
+            <%= user.languages[1] %>
+        </p>
+        <span class="percent">80%</span>
+    </div>
+    <div class="bar">
+        <div class="bar-fill" style="width: 80%;"></div>
+    </div>
+
+    <div class="language-box">
+        <p>
+            <%= user.languages[2] %>
+        </p>
+        <span class="percent">70%</span>
+    </div>
+    <div class="bar">
+        <div class="bar-fill" style="width: 70%;"></div>
+    </div>
+
+    <div class="language-box">
+        <p>
+            <%= user.languages[3] %>
+        </p>
+        <span class="percent">60%</span>
+    </div>
+    <div class="bar">
+        <div class="bar-fill" style="width: 60%;"></div>
+    </div>
+</div>
+
+<div class="marginer"></div>
+
+                <div class="left_4">
+                    <div class="skills-section">
+  <h3 class="section-title">Skills</h3>
+  
+  <% const skillPercents = [90, 85, 80, 75, 85]; %>
+  <% user.skills.forEach((skill, index) => { %>
+    <div class="skill-item">
+      <div class="skill-info">
+        <span class="skill-name"><%= skill %></span>
+        <span class="skill-percent"><%= skillPercents[index] %>%</span>
+      </div>
+      <div class="skill-bar">
+       <!-- <div class="skill-bar-fill" style="width: <%= skillPercents[index] %>%"></div> -->
+
+      </div>
+    </div>
+  <% }) %>
+</div>
+
+
+                </div>
+                <div class="marginer"></div>
+
+                <div class="left_5">
+                    <div class="extra-skills-section">
+  <h3 class="section-title">Extra Skills</h3>
+  <ul class="extra-skills-list">
+    <% user.extra_skills.forEach(skill => { %>
+      <li>
+        <span class="icon">📁</span>
+        <span class="skill-text"><%= skill %></span>
+      </li>
+    <% }) %>
+  </ul>
+</div>
+
+                </div>
+                <div class="marginer"></div>
+            </div>
+            <div class="midd_frame"></div>
+            <div class="right_frame"></div>
+
+        </div>
+    </div>
+
+    
+ </body>
+</html>
