--- a/views/mit.ejs
+++ b/views/mit.ejs
@@ -1,187 +1,303 @@
-<!-- <div>Hello World you are at MIT!</div> -->
-
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="main.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/> 
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/main.css">
+    <link 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.main.css" 
+    rel="stylesheet"/>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.main.js"></script>
     <title>Portfolio</title>
 </head>
-
-
-
 <body>
-
-    <!-- LEFT 1 -->
     <div class="frame">
         <div class="main_frame">
             <div class="left_frame">
                 <div class="left_1">
-                    <div class="left_1-image">
-                        <img src="images/profile.png" 
-                        width="156px" 
-                        height="142px" 
-                        alt=""
-                        />
+                    <div class="left_1_1">
+                    <img src="/author/image/Profile.png" width="156px" height="135px" alt="">
                     </div>
-                    <div class="left_1-2"><%=user.name%></div>
-                    <div class="left_1-3"><%=user.profession%></div>
-                    <div class="left_1-icons">
-    <a class="link href" href="">
-        <div class="icons">
-            <img src="icons/Dribbble.svg" class="icons-1">
-        </div>
-    </a>
-    <a class="link href" href="">
-        <div class="icons">
-            <img src="icons/Facebook.svg" class="icons-1">
-        </div>
-    </a>
-    <a class="link href" href="">
-        <div class="icons">
-            <img src="icons/Instagram.svg" class="icons-1">
-        </div>
-    </a>
-    <a class="link href" href="">
-        <div class="icons">
-            <img src="icons/Linkeding.svg" class="icons-1">
-        </div>
-    </a>
-    <a class="link href" href="">
-        <div class="icons">
-            <img src="icons/Twitter.svg" class="icons-1">
-        </div>
-    </a>
-    <a class="link href" href="">
-        <div class="icons">
-            <img src="icons/Youtube.svg" class="icons-1">
-        </div>
-    </a>
-</div>
-   
+                    <div class="left_1_2"><%=user.name%></div>
+                    <div class="left_1_3"><%=user.profession%></div>
+                    <div class="left_icons">
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="/author/icon/Facebook.svg" class="icon-1" />
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="/author/icon/Instagram.svg" class="icon-2" />
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="/author/icon/Twitter.svg" class="icon-3" />
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="/author/icon/Linkeding.svg" class="icon-4" />
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="/author/icon/Youtube.svg" class="icon-5" />
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="/author/icon/Dribbble.svg" class="icon-6" />
+                            </div>
+                        </a>
+                    </div>
                 </div>
-
                 <div class="marginer"></div>
-<!-- LEFT 2 -->
-          <div class="user-info">
-  <div class="info-box">
-    <span class="info-label">Age:</span>
-    <span class="info-value"><%= user.age %></span>
-  </div>
-  <div class="info-box">
-    <span class="info-label">Residence:</span>
-    <span class="info-value"><%= user.residence %></span>
-  </div>
-  <div class="info-box">
-    <span class="info-label">Address:</span>
-    <span class="info-value"><%= user.address %></span>
-  </div>
-  <div class="info-box">
-    <span class="info-label">Profession:</span>
-    <span class="info-value"><%= user.profession %></span>
-  </div>
-</div>
-
-
-<!-- LEFT 3 -->
-
-<div class="left_3">
-    <h3 class="section-title">Languages</h3>
-
-    <div class="language-box">
-        <p>
-            <%= user.languages[0] %>
-        </p>
-        <span class="percent">100%</span>
-    </div>
-    <div class="bar">
-        <div class="bar-fill" style="width: 100%;"></div>
-    </div>
-
-    <div class="language-box">
-        <p>
-            <%= user.languages[1] %>
-        </p>
-        <span class="percent">80%</span>
-    </div>
-    <div class="bar">
-        <div class="bar-fill" style="width: 80%;"></div>
-    </div>
-
-    <div class="language-box">
-        <p>
-            <%= user.languages[2] %>
-        </p>
-        <span class="percent">70%</span>
-    </div>
-    <div class="bar">
-        <div class="bar-fill" style="width: 70%;"></div>
-    </div>
-
-    <div class="language-box">
-        <p>
-            <%= user.languages[3] %>
-        </p>
-        <span class="percent">60%</span>
-    </div>
-    <div class="bar">
-        <div class="bar-fill" style="width: 60%;"></div>
-    </div>
-</div>
-
-<div class="marginer"></div>
-
+                <div class="left_2">
+                    <div class="age">
+                        <div class="age-1">Age</div>
+                        <div class="age-2">24</div>
+                    </div>
+                    <div class="resi">
+                        <div class="resi-1">Residence</div>
+                        <div class="resi-2">BD</div>
+                    </div>
+                    <div class="free">
+                        <div class="free-1">Freelance</div>
+                        <div class="free-2">Available</div>
+                    </div>
+                    <div class="add">
+                        <div class="add-1">Address</div>
+                        <div class="add-2">Gwangju</div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left_3">
+                    <div class="lang">
+                        Languages
+                    </div>
+                    <div class="bangla">
+                        <div class="bang-1">Bangla</div>
+                        <div class="bang-2">100%</div>
+                    </div>
+                    <div class="left_3-chiz1">
+                        <div class="chiz1"></div>
+                    </div>
+                    <div class="eng">
+                        <div class="eng-1">English</div>
+                        <div class="eng-2">80%</div>
+                    </div>
+                    <div class="left_3-chiz2">
+                        <div class="chiz2"></div>
+                    </div>
+                    <div class="spain">
+                        <div class="spain-1">Spain</div>
+                        <div class="spain-2">60%</div>
+                    </div>
+                    <div class="left_3-chiz3">
+                        <div class="chiz3"></div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
                 <div class="left_4">
-                    <div class="skills-section">
-  <h3 class="section-title">Skills</h3>
-  
-  <% const skillPercents = [90, 85, 80, 75, 85]; %>
-  <% user.skills.forEach((skill, index) => { %>
-    <div class="skill-item">
-      <div class="skill-info">
-        <span class="skill-name"><%= skill %></span>
-        <span class="skill-percent"><%= skillPercents[index] %>%</span>
-      </div>
-      <div class="skill-bar">
-       <!-- <div class="skill-bar-fill" style="width: <%= skillPercents[index] %>%"></div> -->
-
-      </div>
-    </div>
-  <% }) %>
-</div>
-
-
+                    <div class="skil">
+                        Skills
+                         </div>
+                    <div class="html">
+                        <div class="ht-1">Html</div>
+                        <div class="ht-2">90%</div>
+                    </div>
+                    <div class="left_4-chiz1">
+                        <div class="chizi1"></div>
+                    </div>
+                    <div class="Css">
+                        <div class="css-1">Css</div>
+                        <div class="css-2">85%</div>
+                    </div>
+                    <div class="left_4-chiz2">
+                        <div class="chizi2"></div>
+                    </div>
+                    <div class="Js">
+                        <div class="js-1">Js</div>
+                        <div class="js-2">80%</div>
+                    </div>
+                    <div class="left_4-chiz3">
+                        <div class="chizi3"></div>
+                    </div>
+                    <div class="PHP">
+                        <div class="php-1">PHP</div>
+                        <div class="php-2">75%</div>
+                    </div>
+                    <div class="left_4-chiz4">
+                        <div class="chizi4"></div>
+                    </div>
+                    <div class="WordPress">
+                        <div class="wor-1">WordPress</div>
+                        <div class="wor-2">85%</div>
+                    </div>
+                    <div class="left_4-chiz5">
+                        <div class="chizi5"></div>
                 </div>
+                </div>
+                    
                 <div class="marginer"></div>
-
                 <div class="left_5">
-                    <div class="extra-skills-section">
-  <h3 class="section-title">Extra Skills</h3>
-  <ul class="extra-skills-list">
-    <% user.extra_skills.forEach(skill => { %>
-      <li>
-        <span class="icon">📁</span>
-        <span class="skill-text"><%= skill %></span>
-      </li>
-    <% }) %>
-  </ul>
-</div>
-
+                    <div class="ext">
+                        Extra Skills
+                    </div>
+                    <div class="boot">
+                        <div class="boot-1">
+                          <img src="/author/image/Icons.png" width="15px" height="15px" alt="">  
+                        </div>
+                        <div class="boot-2">Bootstrap,   Materialize</div>
+                    </div>
+                    <div class="sty">
+                        <div class="sty-1">
+                            <img src="/author/image/Icons.png" width="15px" height="15px" alt="">
+                        </div>
+                        <div class="sty-2">Stylus,   Sass,   Less</div>
+                    </div>
+                    <div class="gulp">
+                        <div class="gulp-1">
+                            <img src="/author/image/Icons.png" width="15px" height="15px" alt="">
+                        </div>
+                        <div class="gulp-2">Gulp, Webpack, Grunt</div>
+                    </div>
+                    <div class="git">
+                        <div class="git-1">
+                            <img src="/author/image/Icons.png" width="15px" height="15px" alt="">
+                        </div>
+                        <div class="git-2">GIT Knowledge</div>
+                    </div>
                 </div>
                 <div class="marginer"></div>
             </div>
-            <div class="midd_frame"></div>
-            <div class="right_frame"></div>
+            <div class="midd_frame">
+                <div class="midd_top">
+                    <div class="belgi1">
+                        <img src="images/e2.svg" alt="">
+                    </div>
+                    <div class="belgi2">
+                        <img src="images/e1.svg" alt="">
+                    </div>
+                    <div class="belgi3">
+                        <img src="images/e5.svg" alt="">
+                    </div>
+                    <div class="belgi4">
+                        <img src="images/e2.svg" alt="">
+                    </div>
+                    <div class="belgi5">
+                        <img src="images/e2.svg" alt="">
+                    </div>
+                    <div class="belgi6">
+                        <img src="images/e2.svg" alt="">
+                    </div>
+                    <div class="top-1">
+                        Doctor neurologists <br>in OHSU Hospital 
+                    </div>
+                    <div class="top-2">
+                        Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit<br/>. Et, Volutpat Feugiat Placerat Lobortis. Natoque Rutrum<br/> Semper Sed Suspendisse Nunc Lectus.
+                    </div>
+                    <div class="top-3">
+                        <div class="mitti">HIRE ME</div>
+                    </div>
+                    <div class="kamon">
+                        <img src="images/Vector (1).svg" width="10.67px" height="10.37px" alt="">
+                    </div>
+                    <div class="rasm">
+                        <img src="/author/image/image.png" width="326px" height="446px" alt="">
+                    </div>
+                </div>
+                <div class="midd_bottom">
+                    <div class="servis">
+                        My Services
+                    </div>
+                    <div class="servis-2">
+                        Amet Minim Mollit Non Deserunt Ullamco Est Sit Aliqua Dolor <br> Do Amet Sint. Velit Officia Consequat Duis Enim Velit Mollit. <br> Lorem Ipsum
+                    </div>
+                    <div class="quti">
+                        <div class="qut1">
+                            <div class="qut1-1">
+                                <img src="/button image/Icons_game-development.png"  alt="">
+                                <h3>Web development</h3>
+                                <p>Blog E-commerce</p>
+                            </div>
+                        </div>
+                        <div class="qut2">
+                            <div style="margin-top: 17px;" class="qut2-1">
+                                <img src="/button image/Icons_illustration.png"  alt="">
+                                 <h3>UI/UX design</h3>
+                                 <p>Mobile app, Website Design</p>
+                            </div>
+                        </div>
+                        <div class="qut3">
+                            <div style="margin-top: 17px;" class="qut1-1">
+                                <img src="/button image/Icons_Microphone.png"  alt="">
+                                <h3>Sound design</h3>
+                                <p>Voice Over, Beat Making</p>
+                                
+                            </div>
+                        </div>
+                        <div class="qut4">
+                            <div style="margin-top: 17px;" class="qut1-1">
+                                <img src="/button image/Icons_Photographer.png"  alt="">
+                                <h3>Game Desing</h3>
+                                <p>Character Design,Props & Object</p>
 
-        </div>
+                            </div>
+                        </div>
+                        <div class="qut5">
+                            <div style="margin-top: 17px;" class="qut1-1">
+                                <img src="/button image/Vector.png"  alt="">
+                                <h3>Photograph</h3>
+                                <p>Portrait, product photography</p>
+                            </div>
+                        </div>
+                        <div class="qut6">
+                            <div class="qut6-1">
+                                Advertising
+                            </div>
+                            <div class="qut6-2">
+                                Lorem Ipsum Dolor Sit Amet,<br> Consectetur Adipiscing Elit. Vitae<br> Nulla Diam In Ac Dictum A Urna<br> Viverra Morbi. 
+                            </div>
+                            <div class="qut6-3">
+                                ORDERNOW
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            <div class="right_frame">
+                <div class="rig1">
+                    <img src="/author/image/Contrast.png" width="25px", height="25px", alt="">
+                </div>
+                <div class="rig2">
+                    <div class="rig2-1">
+                        <img src="/author/image/Pop up.png" width="65px", height="33px", alt="">
+                    </div>
+                    <div class="rig2-2">
+                        <img src="/author/image/Home.png" width="40px", height="40px", alt="">
+                    </div>
+                    <div class="rig2-3">
+                        <img src="/author/image/Service.png" width="40px", height="40px", alt="">
+                    </div>
+                    <div class="rig2-4">
+                        <img src="/author/image/Cv.png" width="40px", height="40px", alt="">
+                    </div>
+                    <div class="rig2-5">
+                        <img src="/author/image/Portfolio.png" width="40px", height="40px", alt="">
+                    </div>
+                    <div class="rig2-6">
+                        <img src="/author/image/Blog.png" width="40px", height="40px", alt="">
+                    </div>
+                    <div class="rig2-7">
+                        <img src="/author/image/Contact.png" width="40px", height="40px", alt="">
+                    </div>
+                </div>
+            </div>
     </div>
-
     
- </body>
+</body>
+
 </html>
