--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -33,8 +33,8 @@
 <!-- <% items[1].reja %> -->
 <ul id="item-list" class="list-group pb-5">
     <% items.map(function(item) { %>
-        <li
-       class="list-group-item list-group-item d-flex align-items-center justify-content-between"
+    <li
+      class="list-group-item list-group-item d-flex align-items-center justify-content-between"
     >
       <span class="item-text"><%=item.reja%></span>
       <div>
@@ -44,7 +44,12 @@
          >
             Ozgartirish
         </button>
-        <button data-id="<%=item._id%>" class="delete-me btn btn-danger btn-sm">Ochirish</button>
+        <button 
+        data-id="<%=item._id%>" 
+        class="delete-me btn btn-danger btn-sm"
+        >
+        Ochirish
+      </button>
   </div>
     </li>
     <% }) %>
@@ -55,8 +60,7 @@
       Hamma Rejalarni O'chirish
     </button>
 
-</body>
-
-
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
+  </body>
 </html>
